[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/wizarm.gd" type="Script" id=1]
[ext_resource path="res://scenes/items/weapons/mgWand/magicalGirlWand.tres" type="ArrayMesh" id=2]
[ext_resource path="res://sprites/bubble.png" type="Texture" id=3]
[ext_resource path="res://sounds/swish_4.wav" type="AudioStream" id=4]
[ext_resource path="res://scenes/items/projectiles/bubble.tscn" type="PackedScene" id=5]

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
flags_vertex_lighting = true
params_diffuse_mode = 1
params_specular_mode = 4
params_billboard_mode = 1
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 0.4
albedo_texture = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "fire"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Cylinder:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0.05, 0 ), Vector3( 0, 0.05, 0.05 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cylinder:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 2e-06, -90, 55 ), Vector3( 0, -90, 70 ), Vector3( 1e-06, -90, 72.5 ), Vector3( 2e-06, -90, 55 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimationPlayer:playback_default_blend_time")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.25 ]
}

[sub_resource type="Animation" id=3]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Cylinder:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 2e-06, -90, 55 ), Vector3( 0, -90, 52.5 ), Vector3( 2e-06, -90, 55 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cylinder:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0.01, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer:playback_default_blend_time")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.25 ]
}

[sub_resource type="Animation" id=4]
resource_name = "run"
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Cylinder:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -0.05, 0, 0 ), Vector3( 0, 0.025, 0 ), Vector3( 0.05, 0, 0 ), Vector3( 0, 0.025, 0 ), Vector3( -0.05, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:playback_default_blend_time")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.25, 0.0 ]
}

[sub_resource type="Animation" id=5]
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Cylinder:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.16, 0.44 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0.2, 0.15, 0.05 ), Vector3( 0, 0.25, -0.2 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cylinder:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.16, 0.44 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 2e-06, -90, 55 ), Vector3( 0, 90, 135 ), Vector3( 2e-06, 270, 55 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimationPlayer:playback_default_blend_time")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.44 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.25, 0.0 ]
}

[sub_resource type="Animation" id=6]
length = 2.0
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Cylinder:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -0.05, 0, 0 ), Vector3( 0, 0.025, 0 ), Vector3( 0.05, 0, 0 ), Vector3( 0, 0.025, 0 ), Vector3( -0.05, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:playback_default_blend_time")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.25, 0.0 ]
}

[sub_resource type="SphereMesh" id=7]
radius = 0.01
height = 0.02

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.905882, 0.0705882, 0.976471, 1 )

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0.117647, 0.0705882, 0.976471, 1 )

[node name="magicalGirlWand" type="Spatial"]
script = ExtResource( 1 )
projectile = ExtResource( 5 )
secondaryPlayAudio = true

[node name="Cylinder" type="MeshInstance" parent="."]
transform = Transform( -2.1754e-08, -2.97899e-08, -1, 0.819152, 0.573576, -3.49066e-08, 0.573576, -0.819152, 1.19249e-08, 0, 0, 0 )
use_in_baked_light = true
mesh = ExtResource( 2 )
material/0 = null

[node name="Sprite3D" type="Sprite3D" parent="Cylinder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.15, 0 )
material_override = SubResource( 1 )
pixel_size = 0.001
billboard = 1
shaded = true
alpha_cut = 2
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fire = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/run = SubResource( 4 )
anims/secondaryFire = SubResource( 5 )
anims/walk = SubResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="muzzle" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.183375, -0.41062 )

[node name="muzzle" type="Spatial" parent="muzzle"]

[node name="muzzlemuzzlevisualizer" type="MeshInstance" parent="muzzle/muzzle"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0 )
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="muzzlevisualizer" type="MeshInstance" parent="muzzle"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0 )
mesh = SubResource( 7 )
material/0 = SubResource( 9 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.07
one_shot = true

[node name="secondaryTimer" type="Timer" parent="."]
wait_time = 0.44
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="secondaryTimer" to="." method="_on_secondaryTimer_timeout"]
